commit after fixing a lot of bugs😒